--- a/index.html
+++ b/index.html
@@ -1,138 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Official personal website of Vishal Singh Rajput from Jharkhand, India." />
+  <meta name="description" content="Official personal website of Vishal Singh Rajput from Jharkhand, India" />
   <title>Vishal Singh Rajput</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
       margin: 0;
       padding: 0;
-      animation: fadeIn 1.5s ease-in;
-    }
+      background: linear-gradient(135deg, #f57f7a, #c3f2f2);
+      animation: fadeIn 1s ease-in-out;
+    }@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+header {
+  background-color: #fff;
+  color: #333;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
-    header {
-      background: #1f1f1f;
-      color: #fff;
-      padding: 30px 20px;
-      text-align: center;
-      animation: slideDown 1s ease;
-    }
+header h1 {
+  margin: 10px 0;
+}
 
-    @keyframes slideDown {
-      from { transform: translateY(-50px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
+.profile-img {
+  width: 150px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+}
 
-    header img {
-      width: 160px;
-      height: 160px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-top: 15px;
-      border: 4px solid #fff;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-    }
+main {
+  padding: 30px;
+  text-align: center;
+  color: #000;
+}
 
-    header img:hover {
-      transform: scale(1.05);
-    }
+h2 {
+  color: #444;
+}
 
-    main {
-      padding: 30px 20px;
-      max-width: 800px;
-      margin: auto;
-      text-align: center;
-      animation: fadeIn 2s ease-in-out;
-    }
+.info {
+  font-size: 18px;
+  line-height: 1.6;
+}
 
-    h2 {
-      margin-top: 40px;
-      color: #333;
-      position: relative;
-    }
+.contact {
+  margin-top: 30px;
+  font-weight: bold;
+}
 
-    h2::after {
-      content: '';
-      display: block;
-      width: 60px;
-      height: 3px;
-      background-color: #007bff;
-      margin: 8px auto;
-      border-radius: 2px;
-    }
+.social a {
+  margin: 10px;
+  text-decoration: none;
+  color: #0077cc;
+  font-size: 18px;
+}
 
-    ul {
-      list-style: none;
-      padding: 0;
-      line-height: 1.8;
-    }
+.social a:hover {
+  text-decoration: underline;
+}
 
-    .social-links a {
-      display: inline-block;
-      margin: 15px 20px;
-      text-decoration: none;
-      font-size: 20px;
-      color: #007bff;
-      transition: color 0.3s, transform 0.3s;
-    }
+.video-section {
+  margin: 40px auto;
+  max-width: 800px;
+}
 
-    .social-links a:hover {
-      color: #0056b3;
-      transform: scale(1.1);
-    }
+.video-section iframe {
+  width: 100%;
+  height: 450px;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
-    footer {
-      background-color: #1f1f1f;
-      color: #fff;
-      text-align: center;
-      padding: 12px;
-      margin-top: 40px;
-    }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Vishal Singh Rajput</h1>
     <p>From Babu Khutheria, Garhwa, Jharkhand</p>
-    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD...{{TRIMMED}}" alt="Vishal Singh Rajput" />
-  </header>
+    <img src="vishal-jpg.jpg" alt="Vishal Singh Rajput" class="profile-img" />
+  </header>  <main>
+    <h2>About Me</h2>
+    <p class="info">
+      Hello! I'm Vishal Singh Rajput, currently in my final year of B.A. <br>
+      I previously worked at Utkarsh Small Finance Bank.<br>
+      I am passionate about learning and growing in the field of banking and finance.
+    </p><div class="contact">
+  <p>📞 Phone: 8595229840</p>
+  <p>✉ Email: kumarvishal02264@gmail.com</p>
+  <p>🏠 Address: Village Babu Khutheria, Post Kushaha, PS Kandi, District Garhwa, Jharkhand, PIN 822120</p>
+</div>
 
-  <main>
-    <section>
-      <h2>About Me</h2>
-      <p>Hello! I'm Vishal Singh Rajput, currently in my final year of B.A. I previously worked at Utkarsh Small Finance Bank. I am passionate about learning and growing in the field of banking and finance.</p>
-    </section>
+<div class="social">
+  <h3>Connect</h3>
+  <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+  <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+</div>
 
-    <section>
-      <h2>Contact</h2>
-      <ul>
-        <li><strong>Phone:</strong> 8595229840</li>
-        <li><strong>Email:</strong> kumarvishal02264@gmail.com</li>
-        <li><strong>Address:</strong> Village Babu Khutheria, Post Kushaha, PS Kandi, District Garhwa, Jharkhand, PIN 822120</li>
-      </ul>
-    </section>
+<div class="video-section">
+  <h2>My Intro Video</h2>
+  <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+</div>
 
-    <section class="social-links">
-      <h2>Connect</h2>
-      <a href="https://www.instagram.com/i_am_rajput_boy0001?igsh=ZGUzMzM3NWJiOQ==" target="_blank">Instagram</a>
-      <a href="https://www.facebook.com/share/16vDXH6hno/" target="_blank">Facebook</a>
-    </section>
   </main>
-
-  <footer>
-    &copy; 2025 Vishal Singh Rajput. All rights reserved.
-  </footer>
-
 </body>
 </html>
